@@ -1,3 +1,5 @@
+* Remove ModelSQL.default_sequence
+
 Version 2.4.0 - 2012-04-23
 * Bug fixes (see mercurial logs for details)
 * Don't allow rpc call on ModelStorage without ModelView (CVE-2012-0215)
